--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/users
 spring.datasource.username=root
 spring.datasource.password=Kjkszpj1.2.3.
+
+jwt.secret=Y&UNV*($#UW$*MROE:UJ*M#$Ubj5()O:$EV%BI
+jwt.header=Authorization
+jwt.expiration=604800
