--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.password=Kjkszpj1.2.3.
 jwt.secret=Y&UNV*($#UW$*MROE:UJ*M#$Ubj5()O:$EV%BI
 jwt.header=Authorization
 jwt.expiration=604800
+
+# OpenWeather
+openweather.api.key=0eb46a98657359d757415d24a93e46b8
