--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>net.xanarey</groupId>
-    <artifactId>SecurityLearn</artifactId>
+    <artifactId>WeatherService</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>war</packaging>
     <name>WeatherService</name>
@@ -37,7 +37,7 @@
         </dependency>
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
-            <artifactId>jjwt-jackson</artifactId> <!-- if you want to use Jackson for parsing -->
+            <artifactId>jjwt-jackson</artifactId>
             <version>0.11.5</version>
         </dependency>
 
